fixed continuos running of textanimation for page 2 and added support for bigger screens aswell

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <path id="combined_path" class="path" d="M1083.55 452.93 L15 452.93 L15 233.97 M15 15 L1083.55 15 L1083.55 233.97"/>
         </svg> -->
         <div class="flex justify-center items-center">
-            <button id="darkSwitch" class="block bg-black rounded-full p-2 w-12 h-12 dark:bg-white"><i class="text-2xl text-white fa-solid fa-moon"></i></button>
+            <button id="darkSwitch" class="block bg-black rounded-full p-2 w-12 h-12 dark:bg-white 2xl:h-24 2xl:w-24"><i class="text-2xl 2xl:text-5xl text-white fa-solid fa-moon"></i></button>
         </div>
         <div id="contentBox" class="grid grid-cols-12 min-h-[60vh] content-center px-4 sm:px-8">
             <div id="page1" class="col-start-1 col-span-12 md:col-start-4 md:col-span-6">
@@ -22,15 +22,15 @@
                         <path id="combined_path" class="path" d="M1083.55 452.93 L15 452.93 L15 233.97 M15 15 L1083.55 15 L1083.55 233.97"/>
                     </svg>
                     <div class="absolute inset-0 inline-flex flex-col justify-center items-center">
-                        <h1 class="headingText text-animate transition-all duration-700">hassan</h1>
-                        <h1 class="headingText text-animate transition-all duration-700">yaseen</h1>
+                        <h1 class="headingText text-animate transition duration-300">hassan</h1>
+                        <h1 class="headingText text-animate transition duration-300">yaseen</h1>
                     </div>
                 </div>
             </div>
         </div>
         <div class="flex justify-center">
-            <div id="btnShadow" class="group border-transparent bg-black rounded-b-full rounded-e-full dark:bg-amber-400 transition duration-500">
-                <button id="renderSwitch" class="group-hover:-translate-x-2 group-hover:-translate-y-2 custom-btn bg-white dark:bg-black duration-500">who am i?</button>
+            <div id="btnShadow" class="group border-transparent bg-black rounded-b-full rounded-e-full dark:bg-amber-400 transition-colors">
+                <button id="renderSwitch" class="group-hover:-translate-x-2 group-hover:-translate-y-2 2xl:group-hover:-translate-x-4 2xl:group-hover:-translate-y-4 custom-btn bg-white dark:bg-black">who am i?</button>
             </div>
         </div>
     </div>
