fixed major issues i.e animations, page transitions, javascript, added page# 4

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <path id="combined_path" class="path" d="M1083.55 452.93 L15 452.93 L15 233.97 M15 15 L1083.55 15 L1083.55 233.97"/>
         </svg> -->
         <div class="flex justify-center items-center">
-            <button id="darkSwitch" class="block bg-black rounded-full p-2 w-12 h-12 dark:bg-white 2xl:h-24 2xl:w-24"><i class="text-2xl 2xl:text-5xl text-white fa-solid fa-moon"></i></button>
+            <button id="darkSwitch" class="block bg-black rounded-full p-2 w-12 h-12 xl:h-12 xl:w-12 dark:bg-white"><i class="text-2xl text-white fa-solid fa-moon"></i></button>
         </div>
-        <div id="contentBox" class="grid grid-cols-12 min-h-[60vh] content-center px-4 sm:px-8">
+        <div id="contentBox" class="grid grid-cols-12 min-h-[70vh] max-h-[70vh] content-center px-4 sm:px-8">
             <div id="page1" class="col-start-1 col-span-12 md:col-start-4 md:col-span-6">
                 <div id="container" class="relative w-full">
-                    <svg id="rectangle" class="" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1098.55 467.93" style="fill:none; stroke:#ffab3e; stroke-width:40px; stroke-miterlimit:10">
+                    <svg id="rectangle" class="stroke-black dark:stroke-white" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1098.55 467.93" style="fill:none; stroke-width:40px; stroke-miterlimit:10">
                         <path id="combined_path" class="path" d="M1083.55 452.93 L15 452.93 L15 233.97 M15 15 L1083.55 15 L1083.55 233.97"/>
                     </svg>
                     <div class="absolute inset-0 inline-flex flex-col justify-center items-center">
@@ -30,7 +30,7 @@
         </div>
         <div class="flex justify-center">
             <div id="btnShadow" class="group border-transparent bg-black rounded-b-full rounded-e-full dark:bg-amber-400 transition-colors">
-                <button id="renderSwitch" class="group-hover:-translate-x-2 group-hover:-translate-y-2 2xl:group-hover:-translate-x-4 2xl:group-hover:-translate-y-4 custom-btn bg-white dark:bg-black">who am i?</button>
+                <button id="renderSwitch" class="group-hover:-translate-x-2 group-hover:-translate-y-2 custom-btn bg-white dark:bg-black">about me</button>
             </div>
         </div>
     </div>
