fixed major bugs, included darkmode animation, added page#4, optimized javascript code!

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hassan Yaseen</title>
-    <script src="https://kit.fontawesome.com/db20664aa6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/output.css">
 </head>
 <body>
@@ -13,7 +13,7 @@
             <path id="combined_path" class="path" d="M1083.55 452.93 L15 452.93 L15 233.97 M15 15 L1083.55 15 L1083.55 233.97"/>
         </svg> -->
         <div class="flex justify-center items-center">
-            <button id="darkSwitch" class="block bg-black rounded-full p-2 w-12 h-12 xl:h-12 xl:w-12 dark:bg-white"><i class="text-2xl text-white fa-solid fa-moon"></i></button>
+            <button id="darkSwitch" class="block bg-black rounded-full p-2 w-12 h-12 xl:h-12 xl:w-12 dark:bg-white" onclick="darkBtnAnimate(this)"><i class="text-2xl text-white fa-solid fa-moon dark:text-black"></i></button>
         </div>
         <div id="contentBox" class="grid grid-cols-12 min-h-[70vh] max-h-[70vh] content-center px-4 sm:px-8">
             <div id="page1" class="col-start-1 col-span-12 md:col-start-4 md:col-span-6">
