uploaded images to remote server and added their URL`s to images

--- a/index.html
+++ b/index.html
@@ -3,7 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hassan Yaseen</title>
+    <meta name="description" content="Hassan Yaseen's Portfolio website. Hassan Yaseen is a fullstack web developer with expertise in building modern web applications.">
+    <meta property="og:image" content="https://i.ibb.co/Q966g8B/intro-Page.png">
+    <meta property="og:site_name" content="Hassan Yaseen's Portfolio">
+    <meta property="og:title" content="Hassan Yaseen - Fullstack Web Developer">
+    <meta property="og:description" content="Welcome to Hassan Yaseen's Portfolio website. Discover projects, skills, and experience of a fullstack web developer.">
+    <meta property="og:url" content="https://hyworks.vercel.app">
+    <title>Hassan Yaseen - Fullstack Web Developer</title>
     <link rel="stylesheet" href="./node_modules/@fortawesome/fontawesome-free/css/all.min.css">
     <link rel="stylesheet" href="./assets/css/output.css">
 </head>
